@@ -125,7 +125,7 @@ public abstract class AbstractCollectionSemanticProvider implements SemanticProv
             return 0;
         }
         try {
-            return Math.max(0, Math.min(Integer.parseInt(cursor), size));
+            return Math.clamp(Integer.parseInt(cursor), 0, size);
         } catch (NumberFormatException ignored) {
             return 0;
         }
