@@ -331,7 +331,7 @@ public class StructureLibSemanticProvider implements SemanticProvider {
             return 0;
         }
         try {
-            return Math.max(0, Math.min(Integer.parseInt(cursor), size));
+            return Math.clamp(Integer.parseInt(cursor), 0, size);
         } catch (NumberFormatException ignored) {
             return 0;
         }
