@@ -283,8 +283,8 @@ public class GuidebookSceneParticle {
     private int resolveAnimationFrame(int currentAge) {
         int frameOffset;
         if (maxAge > 0) {
-            int clampedAge = Math.max(0, Math.min(maxAge - 1, currentAge));
-            frameOffset = Math.max(0, Math.min(animationFrameCount - 1, clampedAge * animationFrameCount / maxAge));
+            int clampedAge = Math.clamp(currentAge, 0, maxAge - 1);
+            frameOffset = Math.clamp(clampedAge * animationFrameCount / maxAge, 0, animationFrameCount - 1);
         } else if (animationLoop) {
             frameOffset = Math.floorMod(currentAge, animationFrameCount);
         } else {
